# rqt_qml

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
.ci/: before_script.sh
launch/: chat.launch
plugins/Ros/: qmldir  rosplugin.py  rosplugin.qmltypes  rqtqml.py
qml/: Chat.qml
scripts/: rqt_qml
src/rqt_qml/: __init__.py  plugin.py
