<?xml version="1.0"?>
<package format="2">
  <name>rqt_qml</name>
  <version>0.0.0</version>
  <description>The rqt_qml package</description>

  <maintainer email="me@furushchev.ru">Yuki Furuta</maintainer>

  <license>BSD</license>

  <author email="boris.a.gromov@gmail.com">Boris Gromov</author>
  <author email="me@furushchev.ru">Yuki Furuta</author>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend>python-rospkg</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rospy_message_converter</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
    <rqt_qml imports="${prefix}/plugins" plugins="${prefix}/lib"/>
  </export>
</package>
